import React from "react";
import { render } from "@testing-library/react";
import ESInputSearch from "../ESInputSearch";

describe("ESInputSearch", () => {
  it("renders correctly", () => {
    const component = render(<ESInputSearch />);
    expect(component).toBeTruthy();
  });
  it("matches DOM Snapshot on disabled", () => {
    const domTree = render(<ESInputSearch disabled />);
    expect(domTree).toMatchSnapshot();
  });
  it("matches DOM Snapshot on error", () => {
    const domTree = render(<ESInputSearch error />);
    expect(domTree).toMatchSnapshot();
  });
  it("matches DOM Snapshot on pre-set value", () => {
    const domTree = render(<ESInputSearch defaultValue="hello there!" />);
    expect(domTree).toMatchSnapshot();
  });
  it("matches DOM Snapshot on pre-set value and disabled", () => {
    const domTree = render(
      <ESInputSearch defaultValue="hello there!" disabled />
    );
    expect(domTree).toMatchSnapshot();
  });
});
